cabal-version:       >=1.10

name:                AdventOfCode2019
version:             0.1.0.0
synopsis:            My solutions for Advent of Code 2019
description:         TODO: Make readme
license:             BSD3
license-file:        LICENSE
author:              Jared Beller
maintainer:          jbellerb@vt.edu
build-type:          Simple

library
  ghc-options:       -Wall
  build-depends:
    base >=4.12 && <4.13,
    containers,
    lens,
    megaparsec
  exposed-modules:
    AoC19,
    AoC19.Intcode
  hs-source-dirs:    src
  default-language:  Haskell2010

executable intcode
  main-is:           Intcode.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    megaparsec
  hs-source-dirs:    .
  default-language:  Haskell2010

executable day1
  main-is:           Day1.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day2
  main-is:           Day2.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    lens,
    split
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day3
  main-is:           Day3.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    containers,
    megaparsec
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day4
  main-is:           Day4.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    containers,
    megaparsec
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day5
  main-is:           Day5.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    megaparsec
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day6
  main-is:           Day6.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    containers,
    megaparsec
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day7
  main-is:           Day7.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    megaparsec
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day8
  main-is:           Day8.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    containers,
    megaparsec
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day9
  main-is:           Day9.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    megaparsec
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day10
  main-is:           Day10.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    containers
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day11
  main-is:           Day11.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    containers,
    megaparsec
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day12
  main-is:           Day12.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    megaparsec
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day13
  main-is:           Day13.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    containers,
    megaparsec
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day14
  main-is:           Day14.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    containers,
    megaparsec
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day15
  main-is:           Day15.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    containers,
    megaparsec
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day16
  main-is:           Day16.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019
  hs-source-dirs:    solutions
  default-language:  Haskell2010

executable day17
  main-is:           Day17.hs
  build-depends:
    base >=4.12 && <4.13,
    AdventOfCode2019,
    containers,
    megaparsec
  hs-source-dirs:    solutions
  default-language:  Haskell2010
